[gd_scene load_steps=10 format=3 uid="uid://b3p8cxrrg0xaw"]

[ext_resource type="PackedScene" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://main.gd" id="2"]
[ext_resource type="PackedScene" path="res://mob.tscn" id="3"]
[ext_resource type="PackedScene" path="res://HUD.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://cesfd1bug0li5" path="res://art/Creed - Higher (Official Video) copy.mp3" id="5"]
[ext_resource type="AudioStream" uid="uid://bug0poxkhy8lq" path="res://art/gameover.wav" id="6"]
[ext_resource type="PackedScene" path="res://Settings.tscn" id="7"]
[ext_resource type="PackedScene" path="res://Highscore.tscn" id="8"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4, 4, 0, 0, 0, 0, 478, 3, 0, 0, 0, 0, 481, 723, 0, 0, 0, 0, 2, 725, 0, 0, 0, 0, 4, 4)
}
point_count = 5

[node name="Node" type="Node"]
script = ExtResource("2")
mob_scene = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.862745, 0.560784, 0.913725, 1)

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="Player" parent="." instance=ExtResource("1")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(4, 4)
rotation = -0.0021097

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="Settings" parent="." instance=ExtResource("7")]

[node name="ScoreBoard" parent="." instance=ExtResource("8")]

[connection signal="highscore" from="HUD" to="ScoreBoard" method="_on_HUD_highscore"]
[connection signal="settings" from="HUD" to="Settings" method="_on_settings"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="back_clicked" from="Settings" to="HUD" method="_on_Settings_back_clicked"]
[connection signal="easy" from="Settings" to="." method="_on_Settings_easy"]
[connection signal="hard" from="Settings" to="." method="_on_Settings_hard"]
[connection signal="medium" from="Settings" to="." method="_on_Settings_medium"]
[connection signal="new_bg" from="Settings" to="." method="_on_Settings_new_bg"]
[connection signal="menu" from="ScoreBoard" to="HUD" method="_on_ScoreBoard_menu"]
[connection signal="replay" from="ScoreBoard" to="HUD" method="_on_ScoreBoard_replay"]
